Added photo functionality

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -9,5 +9,10 @@
       "Microsoft": "Information",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "CloudinarySettings:": {
+    "CloudName": "di4m8fsvt",
+    "ApiKey": "359537362549486",
+    "ApiSecret": "5dbdhWSbi7hwdNfM8g09X_zrljM"
   }
 }
